k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
  namespace: url-shortener
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: url-shortener
              topologyKey: kubernetes.io/hostname
      containers:
        - name: url-shortener
          image: ghcr.io/cyanghxst/pe-hackathon:latest
          ports:
            - containerPort: 5000
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: 512Mi
              cpu: 1000m
            limits:
              memory: 2Gi
              cpu: 2000m
