k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-svc
  namespace: url-shortener
spec:
  type: NodePort
  selector:
    app: url-shortener
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
      name: http
